--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ Basic Background
 
 html, body {
     box-sizing: border-box;
-    height:100%;
+    height:500px;
     width: 100%;
     margin: 0px;
     padding: 0px; 
@@ -12,7 +12,13 @@ html, body {
 }
 
 body {
-    background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/swirl_pattern.png);  
+    background-image: url('../images/paint.jpeg');
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
+    position: relative;
+    margin-bottom: 500px;
+
 }
 
 h1, h2, h3, h4 {
@@ -181,7 +187,8 @@ Content
     width: 960px;
     margin-left: 200px;
     margin-right: 60px;
-    display: inline-block;
+    margin-bottom: 20px;
+    display:inline-block;
   }
 
 section {
