--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 body {
-    background-image: url('../images/paint.jpeg');
+    background-image: url('../images/lights.jpeg');
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
@@ -190,7 +190,16 @@ Content
     margin-bottom: 20px;
     display:inline-block;
   }
+  .project {
+    /* flex: 1 0 auto; */
+    width: auto;
+    margin-left: 200px;
+    margin-right: 60px;
+    margin-bottom: 20px;
+    display:inline-block;
 
+    background-color: transparent
+  }
 section {
     background-color: #ffffff;
     border-style: solid;
@@ -226,6 +235,8 @@ section p {
     width: 270px;
     text-align: center;
     height: auto;
+    margin-right: 10px;
+   
 }
 
 .imageContainer {
@@ -317,11 +328,14 @@ Page-Specific Content (By ID)
 .col-sm-6 {
     display: inline-block;
     position: relative;
+
+    
 }
 
 .col-sm-6 img {
     margin-right: 5px;
     margin-bottom: 30px;
+
 }
 
 .col-sm-6 img:hover {
@@ -336,7 +350,7 @@ Page-Specific Content (By ID)
     margin-bottom: 20px;
     background-color: #4aaaa5;
     height: 50px;
-    width: 300px;
+    width: 200px;
     position: absolute;
     left: 0px;
     bottom: 20px; 
